spring-secure-resource-server/templates/ingress.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:regexp", "regexp")

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: postal-codes-search-ingress
  namespace: #@ data.values.workloadNamespace  
spec:
  virtualhost:
    fqdn:  #@ "postal-code-search." + data.values.appDomain
    tls:
      secretName: postal-codes-search-cert   
  routes:
    - conditions:
        - prefix: /
      services:
        - name: #@ data.values.gatewayName
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: postal-codes-audit-ingress
  namespace: #@ data.values.workloadNamespace  
spec:
  virtualhost:
    fqdn:  #@ "postal-code-audit." + data.values.appDomain
    tls:
      secretName: postal-codes-audit-cert   
  routes:
    - conditions:
        - prefix: /
      services:
        - name: #@ data.values.gatewayName
          port: 80
